packages/parser/tests/snapshots/pds_test__pds_test@5.pds.snap
---
source: packages/parser/tests/pds_test.rs
expression: ast
input_file: packages/parser/fixtures/pds/5.pds
---
Module {
    statements: [
        LineComment(
            LineComment(
                "lineComment(0, 40)",
            ),
        ),
        Assign(
            Assign {
                ident: Ident(
                    "main",
                ),
                args: AssignArgs {
                    patterns: [],
                },
                expr: Literal(
                    Text(
                        "Hello world",
                    ),
                ),
                where_clause: Module {
                    statements: [],
                },
            },
        ),
    ],
}
